fix dropdown menu on mobile

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -116,7 +116,6 @@
   font-style: normal;
   display: inline-block;
   color: #54a0f1;
-  background-color: transparent;
   text-decoration: none;
   border-radius: 0.6vw;
   border: solid 0.2vw #54a0f1;
